Fixed z-index of top bar

--- a/responsive-primefaces/src/main/webapp/resources/algaworks/styles/layout.css
+++ b/responsive-primefaces/src/main/webapp/resources/algaworks/styles/layout.css
@@ -5,7 +5,7 @@
 	right: 0;
 	left: 0;
 	min-height: 50px;
-	z-index: 9999;
+	z-index: 999;
 	
 	background-color: #1e94d2;
 }
